# sqlguard

./: .coverage  .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  sql_analysis_20251119_223151.json  test_demo.py
.github/workflows/: ci.yml  docs.yml  snyk.yml  tests.yml
CHANGELOG/: index.html
architecture/ARCHITECTURE/: index.html
architecture/DESIGN_DECISIONS/: index.html
architecture/detector-system/: index.html
development/ADDING_DETECTORS/: index.html
development/contributing/: index.html
docs/: getting-started.md  reference.md  security.md
docs/examples/: sample.sql
docs/tests/: test.md
getting-started/: index.html
mkdocs-site/CHANGELOG/: index.html
mkdocs-site/architecture/detector-system/: index.html
mkdocs-site/architecture/parser-engine/: index.html
mkdocs-site/architecture/system-design/: index.html
mkdocs-site/detectors/high-severity/: index.html
mkdocs-site/detectors/low-severity/: index.html
mkdocs-site/detectors/medium-severity/: index.html
mkdocs-site/detectors/overview/: index.html
mkdocs-site/development/setup/: index.html
mkdocs-site/examples/basic-usage/: index.html
mkdocs-site/examples/github-actions/: index.html
mkdocs-site/examples/jenkins/: index.html
mkdocs-site/examples/pre-commit-hook/: index.html
mkdocs-site/getting-started/configuration/: index.html
mkdocs-site/getting-started/first-analysis/: index.html
mkdocs-site/getting-started/installation/: index.html
mkdocs-site/license/: index.html
mkdocs-site/security/best-practices/: index.html
mkdocs-site/site/: 404.html  index.html
mkdocs-site/site/search/: search_index.json
mkdocs-site/troubleshooting/common-issues/: index.html
mkdocs-site/troubleshooting/performance/: index.html
mkdocs-site/user-guide/cli-reference/: index.html
mkdocs-site/user-guide/interactive-mode/: index.html
reference/: index.html
search/: search_index.json
security/: index.html
src/slowql/: __init__.py  cli.py  cli_help.py
src/slowql/core/: analyzer.py  detector.py
src/slowql/effects/: animations.py
src/sqlguard/: cli.py
src/sqlguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/integration/: test_cli.py
tests/performance/: test_bemchmarks.py
tests/test/: index.html
tests/unit/: test_analyzer.py  test_console.py  test_detector.py
(+27 files in other folders)
