[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "slowql"
version = "1.0.0"
description = "Cinematic static SQL analyzer with cyberpunk CLI"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "El Mehdi Makroumi", email = "elmehdi.makroumi@gmail.com" }]
keywords = ["sql", "analysis", "cli", "performance", "database"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.3.0",
  "rich>=13.0.0",
  "sqlparse>=0.4.0",
]

# SPDX-compatible custom license reference and include license file
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]

# Optional extras
[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
  "flake8>=6.0.0",
  "isort>=5.0.0",
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-rtd-theme>=1.0.0",
]

# Console script entry points
[project.scripts]
slowql = "slowql.cli:main"

[project.urls]
Homepage = "https://github.com/makroumi/slowql"
Repository = "https://github.com/makroumi/slowql"
